# LPA-Kemeny-Young

./: .gitignore  Execution.ipynb  Execution_Estelle data.ipynb  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
src/propagation/: __init__.py  kemeny.py  lpa.py
tests/: test_core.py  test_imports.py
