[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"


[project]
name = "lpa-kemeny-young"
version = "0.1.0"
description = "Label propagation and Kemeny-Young aggregation for metabolic network analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Sandra Costa" }
]

dependencies = [
    "networkx>=3.2,<4",
    "pandas",
    "matplotlib>=3.10",
]


[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "build>=1,<2",
    "pip-tools>=7,<8",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"